codegen/ui_tests/return_pointer.stderr
error: Rhai functions cannot return pointers
  --> ui_tests/return_pointer.rs:13:33
   |
13 | pub fn test_fn(input: Clonable) -> *const str {
   |                                 ^

error[E0425]: cannot find function `test_fn` in this scope
  --> ui_tests/return_pointer.rs:25:19
   |
25 |         let ptr = test_fn(n);
   |                   ^^^^^^^ not found in this scope
